# Content-Ops

./: .env.example  .gitignore  README.md  docker-compose.yml  setup.sh
cron/: crontab
database/init/: 01_content_ops_init.sql
docs/: setup.md
nginx/: nginx.conf
python-automation/: Dockerfile  pyproject.toml
python-automation/scripts/: backup_now.py  sync_content.py
python-automation/src/content_ops/: __init__.py  backup.py  config.py  content_sync.py  r2_storage.py  scheduler.py
scripts/: backup.sh  sync.sh
wordpress/shared-config/: content-ops-config.php
