[tool.poetry]
name = "content-ops-automation"
version = "0.1.0"
description = "Automation scripts for Content Ops unified project management"
authors = ["Content Ops Team <admin@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mysql-connector-python = "^8.2.0"
redis = "^5.0.0"
boto3 = "^1.34.0"
requests = "^2.31.0"
schedule = "^1.2.0"
python-dotenv = "^1.0.0"
click = "^8.1.0"
pyyaml = "^6.0"
cryptography = "^41.0.0"
sqlalchemy = "^2.0.0"
alembic = "^1.13.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.12.0"
flake8 = "^6.1.0"
mypy = "^1.8.0"
pre-commit = "^3.6.0"

[tool.poetry.scripts]
backup = "content_ops.backup:main"
content-sync = "content_ops.content_sync:main"
r2-upload = "content_ops.r2_storage:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=content_ops"
testpaths = ["tests"]